--- a/src/sass/example-page/typography.scss
+++ b/src/sass/example-page/typography.scss
@@ -33,23 +33,15 @@
 
 blockquote {
   border-left: 4px solid $gray;
-  margin: 0 0 2rem 0;
-  padding-left: 1rem;
-
-  strong {
-    font-weight: bold;
-    font-size: 1rem;
-    margin-bottom: 0;
-    color: #232323;
-  }
+  margin-left: $space-m;
+  padding-left: $space-m;
 
   &.tips { border-left: 4px solid $green; }
-  .tips-list {
-    margin: -1.3rem 0 0 0;
-    padding-left: 2rem;
-  }
+  &.warning { border-left: 4px solid $orange; }
   &.caution { border-left: 4px solid $red; }
   &.related { border-left: 4px solid $blue; }
+  p { margin-top: 0.5rem; }
+  .tips-list { line-height: 1.5rem; }
 }
 
 .has-number {
