--- a/src/sass/dashboard/main.scss
+++ b/src/sass/dashboard/main.scss
@@ -2,28 +2,18 @@
 //---------- VARIABLES  ----------\\
 //--------------------------------\\
 
-//Variables
-$app-background:     #e0e0e0;
-
 $content-width: 1200px !default;
 
-$header-padding: 0.5rem;
 $header-height: 4rem;
-$half-padding: 0.5rem;
-$full-padding: $grid-gutter;//1rem;
+$sub-nav-height: 3rem;
 
 $header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
-$sub-nav-height: calc(#{$header-height} / 2);
-$sub-nav-color: $white;
-$header-gradient: linear-gradient(100deg, $blue-600, $blue-800);
-$header-background: $white;
 
-//Theme
 .header {
-  z-index: 3;
+  z-index: 2;
   display: flex;
   align-items: center;
-  padding: $header-padding;
+  padding: $space-xs;
   position: fixed;
   top: 0;
   left: 0;
@@ -37,44 +27,37 @@ $header-background: $white;
   width: 100%;//IE wants this... okay IE. Here you are.
 
   &::after {
+    z-index: -1;
   	content: "";
-    box-shadow: $header-shadow;
   	width: 100%;
   	height: $header-height;
-    background-image: $header-gradient;
+    background: $brand-blue;
   	position: fixed;
   	top: 0;
   	left: 0;
-  	z-index: -1;
   }
 
   .header-nav {
-    margin-right: auto;
+
     ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
+      @extend %remove-list-style;
+
       li {
         display: inline-block;
-        margin-right: auto;
-
-        margin: 0 1rem;
-        height: 2.5rem;
-        max-width: 5rem;
         align-items: center;
 
         a {
-          width: 100%;
-          height: 100%;
+          margin: 0 $space-m;
           display: flex;
           align-items: center;
-          color: $gray-100;
-          font-weight: 400;
+          color: $white;
+          font-weight: 600;
           font-size: 1.1rem;
-
           border-bottom: 2px solid transparent;
-          &:hover  { border-bottom: 3px solid $gray-100; }
-          &.active { border-bottom: 3px solid $gray-100; }
+          @include transition(0.2s ease-out);
+
+          &:hover, &.active { border-bottom: 2px solid $white; }
+
         }
       }
     }
@@ -82,6 +65,7 @@ $header-background: $white;
 }
 
 .content {
+  z-index: 0;
   max-width: $content-width;
   margin: auto;
   margin-top: $header-height;
@@ -93,6 +77,7 @@ $header-background: $white;
 }
 
 .sub-nav {
+  z-index: 1;
   height: $sub-nav-height;
 
   ~.content {
@@ -100,27 +85,21 @@ $header-background: $white;
   }
 
   position: fixed;
+  left: 0;
+  right: 0;
   top: $header-height;
 
   max-width: $content-width;
   margin: auto;
 
-  display: flex;
-  align-items: center;
-  position: fixed;
-  left: 0;
-  right: 0;
-
   width: 100%;
-
-  z-index: 0;
 
   &::after {
   	content: "";
     box-shadow: $header-shadow;
   	width: 100%;
-  	height: calc(#{$header-height} / 2);
-    background-color: $sub-nav-color;
+  	height: $sub-nav-height;
+    background-color: $white;
   	position: fixed;
   	top: $header-height;
   	left: 0;
@@ -132,29 +111,25 @@ $header-background: $white;
   }
 
   ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    @extend %remove-list-style;
+    white-space: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
 
     li {
       display: inline-block;
-      margin-right: auto;
-
-      margin: 0 1rem;
-      max-width: 5rem;
-      align-items: center;
+      margin: 0 $space-m;
 
       a {
-        width: 100%;
         display: flex;
         align-items: center;
-        color: $gray-900;
-        font-weight: 400;
+        color: $brand-blue;
+        font-weight: 600;
         font-size: 1rem;
+        @include transition(0.2s ease-out);
 
-        border-bottom: 2px solid transparent;
-        &:hover  { border-bottom: 3px solid $gray-900; }
-        &.active { border-bottom: 3px solid $gray-900; }
+        border-bottom: 3px solid transparent;
+        &:hover, &.active  { border-bottom: 3px solid $brand-blue; }
       }
     }
   }
