--- a/src/sass/modules/card/_card.scss
+++ b/src/sass/modules/card/_card.scss
@@ -133,6 +133,7 @@
       }
       &.is-selectable {
         tbody tr {
+          transition: $global-transition;
           &:hover {
             cursor: pointer;
             background-color: $gray-100;
