--- a/src/sass/modules/card/_card.scss
+++ b/src/sass/modules/card/_card.scss
@@ -111,7 +111,7 @@
     }
   }
   //Table within Card
-  .table--container {
+  .card-table {
     overflow-x: auto;
     border-radius: 0 0 5px 5px;
     .table,
