small bug fixes to forms and actions // removed completed experimental code

--- a/src/sass/experimental/sign-up-custom.scss
+++ b/src/sass/experimental/sign-up-custom.scss
@@ -29,7 +29,7 @@ This is an EXPERIMENT and is not ready to be included in production!
   }
 }
 
-.membershipStartDate { //width was broken
+.membershipStartDate {
   width: calc(100% - 3rem);
   margin-bottom: $space-m;
   @media #{$tablet} { width: 12rem; }
