fixed menu-nav icon color

--- a/src/sass/base/extendables/_extendables.scss
+++ b/src/sass/base/extendables/_extendables.scss
@@ -12,7 +12,7 @@
 /* Icon Extendables
 =========================================================================== */
 //TO DO: Add more colors for icons
-%icon-white { i:before { color: $white; } }
+%icon-white { i:before { color: $white !important; } }
 
 /* Shadow Extendables
 =========================================================================== */
