- add prisms as a plugin - fix firefox <pre> and <code> so that it wraps

--- a/src/sass/example-page/prism.scss
+++ b/src/sass/example-page/prism.scss
@@ -354,3 +354,8 @@ pre.line-numbers > code {
      display: block;
    }
 }
+
+code, pre {
+white-space:pre-wrap !important;
+word-wrap:break-word !important;
+}
