Add thumbnail to template image

--- a/src/sass/example-page/image.scss
+++ b/src/sass/example-page/image.scss
@@ -64,3 +64,8 @@
   &#typography--specimen { background-image: url("../../img/typography-specimen.svg"); padding-bottom: 55%; }
   &#typography--line-length { background-image: url("../../img/typography--line-length.png"); padding-bottom: 40%; }
 }
+
+.card--image {
+  width: 100%;
+  height: auto;
+}
