--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -26,7 +26,7 @@ body {
   justify-content: center;
   align-items: center;
   img {
-    width: 6rem;
+    width: 100%;
   }
 }
 
@@ -73,7 +73,7 @@ body {
   }
   .active {
     color: $white;
-    background-color: $blue;
+    background-color: $brand-blue;
     border-radius: 5px;
   }
 
@@ -125,7 +125,7 @@ body {
   ================================================== */
 
 .splash-image {
-  background-image: linear-gradient(-45deg, $blue , $purple);
+  background-image: linear-gradient(-45deg, $brand-blue, $brand-purple);
   height: 22rem;
   margin-top: -1rem;
   position: relative;
@@ -164,9 +164,9 @@ body {
     border-radius: 10px;
     margin-right: 1rem;
     @extend %shadow-50;
-    &.consistent { background-color: $blue; }
-    &.clean { background-color: $green; }
-    &.confident { background-color: $purple; }
+    &.consistent { background-color: $brand-gray; }
+    &.clean { background-color: $brand-blue; }
+    &.confident { background-color: $brand-purple; }
     @media #{$tablet} {
       display: block;
     }
@@ -186,7 +186,7 @@ body {
 }
 
 .subnav {
-  background-color: $blue;
+  background-color: $brand-blue;
   box-shadow: 0 2px 6px $gray-200;
   h1 {
     max-width: $global-content-width;
