--- a/src/sass/example-page/color.scss
+++ b/src/sass/example-page/color.scss
@@ -28,11 +28,17 @@ $medical-green:           #2EB9AB;
 $ui-gray: #D4D4D4;
 $ui-grey: #D4D4D4;
 
-$brand-purple: #9F65AE;
-$brand-light-gray: #EDEDED;
-$brand-gray: #D4D4D4;
-$brand-grey: #D4D4D4;
-$brand-black: #24292C;
+// $brand-purple: #9F65AE;
+// $brand-light-gray: #EDEDED;
+// $brand-gray: #D4D4D4;
+// $brand-grey: #D4D4D4;
+// $brand-black: #24292C;
+
+$brand-purple: #72569B;
+$brand-blue: #28336D;
+$brand-red: #E96A63;
+$brand-yellow: #F5CD66;
+$brand-gray: #F1F2F2;
 
 $neutral100: #24292C;
 $neutral90: #434F5B;
