--- a/src/sass/example-page/image.scss
+++ b/src/sass/example-page/image.scss
@@ -68,4 +68,7 @@
 .card--image {
   width: 100%;
   height: auto;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  vertical-align: middle;
 }
