clean up the spacing for the add to url button

--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -270,6 +270,7 @@ h2 {
       transition: all 0.25s;
       opacity: 1;
       text-align: left;
+      margin-left: 1rem !important;
       display: inline;
 
     @media #{$tablet} {
