restructure “dashboard” files

--- a/src/sass/experimental/mobilemenu.scss
+++ b/src/sass/experimental/mobilemenu.scss
@@ -1,4 +1,15 @@
-//Note: This contains classes for a mobile menu as well as the legacy sidebar.
+/*
+_______   _______ ___________ ________  ________ _   _ _____ ___  _
+|  ___\ \ / / ___ \  ___| ___ \_   _|  \/  |  ___| \ | |_   _/ _ \| |
+| |__  \ V /| |_/ / |__ | |_/ / | | | .  . | |__ |  \| | | |/ /_\ \ |
+|  __| /   \|  __/|  __||    /  | | | |\/| |  __|| . ` | | ||  _  | |
+| |___/ /^\ \ |   | |___| |\ \ _| |_| |  | | |___| |\  | | || | | | |____
+\____/\/   \|_|   \____/\_| \_|\___/\_|  |_|____/\_| \_/ \_/\_| |_|_____/
+
+This is an EXPERIMENT and is not ready to be included in production!
+*/
+
+//This is the mobile menu including sidebar and profile
 
 //Variables
 $animation-time: 0.3s;
