--- a/src/sass/experimental/placeholder.scss
+++ b/src/sass/experimental/placeholder.scss
@@ -1,5 +1,15 @@
-//This file is for small elements that have not yet been approved
-//but needed to be represented visually
+/*
+_______   _______ ___________ ________  ________ _   _ _____ ___  _
+|  ___\ \ / / ___ \  ___| ___ \_   _|  \/  |  ___| \ | |_   _/ _ \| |
+| |__  \ V /| |_/ / |__ | |_/ / | | | .  . | |__ |  \| | | |/ /_\ \ |
+|  __| /   \|  __/|  __||    /  | | | |\/| |  __|| . ` | | ||  _  | |
+| |___/ /^\ \ |   | |___| |\ \ _| |_| |  | | |___| |\  | | || | | | |____
+\____/\/   \|_|   \____/\_| \_|\___/\_|  |_|____/\_| \_/ \_/\_| |_|_____/
+
+This is an EXPERIMENT and is not ready to be included in production!
+*/
+
+//This file is for placeholder pieces that have been needed but should be replaced by official modules.
 
 //VARIABLES
 $container-colors: transparent;//#413552
