--- a/src/sass/modules/header/header.scss
+++ b/src/sass/modules/header/header.scss
@@ -7,7 +7,10 @@ $content-width: 1200px !default;
 $header-height: 4rem;
 $sub-nav-height: 3rem;
 
-$header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
+//Theme
+$header-color: $brand-blue !default;
+$sub-nav-color: $white !default;
+$header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5) !default;
 
 .header {
   z-index: 2;
@@ -31,7 +34,7 @@ $header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
   	content: "";
   	width: 100%;
   	height: $header-height;
-    background: $brand-blue;
+    background: $header-color;
   	position: fixed;
   	top: 0;
   	left: 0;
@@ -50,13 +53,13 @@ $header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
           margin: 0 $space-m;
           display: flex;
           align-items: center;
-          color: $white;
+          color: $sub-nav-color;
           font-weight: 600;
           font-size: 1.1rem;
           border-bottom: 2px solid transparent;
           @include transition(0.2s ease-out);
 
-          &:hover, &.active { border-bottom: 2px solid $white; }
+          &:hover, &.active { border-bottom: 2px solid $sub-nav-color; }
 
         }
       }
@@ -95,7 +98,7 @@ $header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
     box-shadow: $header-shadow;
   	width: 100%;
   	height: $sub-nav-height;
-    background-color: $white;
+    background-color: $sub-nav-color;
   	position: fixed;
   	top: $header-height;
   	left: 0;
@@ -119,13 +122,13 @@ $header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
       a {
         display: flex;
         align-items: center;
-        color: $brand-blue;
+        color: $header-color;
         font-weight: 600;
         font-size: 1rem;
         @include transition(0.2s ease-out);
 
         border-bottom: 3px solid transparent;
-        &:hover, &.active  { border-bottom: 3px solid $brand-blue; }
+        &:hover, &.active  { border-bottom: 3px solid $header-color; }
       }
     }
   }
