--- a/src/sass/paragon.scss
+++ b/src/sass/paragon.scss
@@ -1,7 +1,9 @@
 @import "vendor/vendor";
 @import "base/base";
 @import "modules/modules";
-@import "dashboard/dashboard";
+// @import "dashboard/dashboard";
+
+//Don't publish with this on. Thanks.
 @import "experimental/experimental";
 
 @font-face {
